(Ben, Elsa) trying to fix scrollbar

--- a/client/app/schedule.view/schedule.view.css
+++ b/client/app/schedule.view/schedule.view.css
@@ -4,8 +4,6 @@
   height: 1200px;
   width: 200px;
   padding: 0 5px;
-  white-space: nowrap;
-  overflow-x: scroll;
 }
 
 .slot-container {
@@ -54,4 +52,9 @@
   vertical-align: middle;
   background-color: #F4A460;
   border-radius: 10px;
+}
+
+#scrollable{
+  white-space: nowrap;
+  overflow-x: scroll;
 }
